--- a/src/main/resources/com/company/freightroutingnn/login-view.fxml
+++ b/src/main/resources/com/company/freightroutingnn/login-view.fxml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/18" fx:controller="com.company.freightroutingnn.HelloController">
+<VBox alignment="CENTER" spacing="20.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.company.freightroutingnn.LoginController">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
    <TextField fx:id="username" promptText="Username" />
    <TextField fx:id="password" promptText="Password" />
     <Button onAction="#onHelloButtonClick" text="Log In" />
+   <Button fx:id="signUp" mnemonicParsing="false" text="Sign Up" />
+   <AnchorPane prefHeight="200.0" prefWidth="200.0" />
 </VBox>
