--- a/src/main/resources/com/company/freightroutingnn/signup.fxml
+++ b/src/main/resources/com/company/freightroutingnn/signup.fxml
@@ -10,5 +10,6 @@
     </padding>
    <TextField fx:id="emailAddress" promptText="Email Address" />
    <TextField fx:id="password" promptText="Password" />
+   <Label fx:id="userMessage" />
    <Button fx:id="signUp" mnemonicParsing="false" text="Sign Up" />
 </VBox>
