--- a/src/main/resources/com/company/freightroutingnn/main-view.fxml
+++ b/src/main/resources/com/company/freightroutingnn/main-view.fxml
@@ -3,15 +3,14 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.company.freightroutingnn.controllers.MainController">
    <children>
       <MenuBar prefHeight="25.0" prefWidth="600.0">
         <menus>
           <Menu mnemonicParsing="false" text="File">
-            <items>
-              <MenuItem fx:id="addJob" mnemonicParsing="false" text="Add Job" />
-                  <MenuItem fx:id="viewJobs" mnemonicParsing="false" text="View Jobs" />
-            </items>
+               <items>
+                  <MenuItem fx:id="addJob" mnemonicParsing="false" text="Add Job " />
+               </items>
           </Menu>
           <Menu mnemonicParsing="false" text="Edit">
             <items>
